ecmascript/parser/tests/test262-error-references/fail/08bafe059b17ac92.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/08bafe059b17ac92.js:1:6
  |
1 | [+{a = 0}];
  |      ^

error: Expected Comma, got Some(AssignOp("="))
 --> $DIR/tests/test262-parser/fail/08bafe059b17ac92.js:1:6
  |
1 | [+{a = 0}];
  |      ^

